--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,3 +1,18 @@
+<!-- Loads the path to your static files -->
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <!-- Logo -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'music:index' %}" >Viberr</a>
+
+    </div>
+</nav>
+
 {% if all_albums %}
     <h3>Here are all my Albums:</h3>
     <ul>
