--- a/music/templates/music/album_form.html
+++ b/music/templates/music/album_form.html
@@ -1,9 +1,9 @@
-{% extends 'music:base.html' %}
-{% block title %}Add n New Album{% endblock %}
+{% extends 'music/base.html' %}
+{% block title %}Add a New Album{% endblock %}
 {% block albums_active %}active{% endblock %}
 
 {% block body %}
-<div class="container_fluid">
+<div class="container-fluid">
 
     <div class="row">
 
